--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,3 @@
 language: bash
-script: "timeout --preserve-status 84600 ./yam --config yam.cfg"
+script: "chmod +x ./yam 
+timeout --preserve-status 84600 ./yam --config yam.cfg"
