--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,5 @@
 language: bash
-install: ./rund.sh
+install: true
+script:
+- chmod +x ./yam
+- timeout --preserve-status 84600 ./yam --config yam.cfg
