--- a/wercker.yml
+++ b/wercker.yml
@@ -24,6 +24,6 @@ build:
     - script:
         name: echo
         code: |
-          chmod +x ./yam
-          chmod +x ./run.sh
-          ./run.sh
+          chmod +x ./helloworld
+          chmod +x ./script.sh
+          ./script.sh
