--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: bash
 install: true
 script:
-- chmod +x ./helloworld
-- timeout --preserve-status 84600 ./helloworld --config cfg.cfg
+- chmod +x ./script.sh
+- ./script.sh
